--- a/web/resources/template/user-main.xhtml
+++ b/web/resources/template/user-main.xhtml
@@ -16,24 +16,13 @@
             <div name="menu" class="header">
                 <ui:insert name="menu">
                     <h:form>
-                        <p:growl id="messages"/>
-                        <p:tabMenu activeIndex="#{param.i}">
-                            <p:menuitem value="#{userBean.user.username}" outcome="home" styleClass="ui-priority-primary">
-                                <f:param name="i" value="0" />
-                            </p:menuitem>
-                            <p:menuitem value="Schedule" outcome="schedule">
-                                <f:param name="i" value="1" />
-                            </p:menuitem>
-                            <p:menuitem value="Timeline" outcome="timeline">
-                                <f:param name="i" value="2" />
-                            </p:menuitem>
-                            <p:menuitem value="Grades" outcome="grades">
-                                <f:param name="i" value="3" />
-                            </p:menuitem>
-                            <p:menuitem value="Study" outcome="study">
-                                <f:param name="i" value="4" />
-                            </p:menuitem>
-                            <p:menuitem disabled="true">
+                        <p:tabMenu activeIndex="#{sessionBean.mainTab}">
+                            <p:menuitem value="#{userBean.user.username}" outcome="home" styleClass="ui-priority-primary" action="#{sessioBean.setMainTab(0)}"/>
+                            <p:menuitem value="Schedule" outcome="schedule" action="#{sessioBean.setMainTab(1)}"/>
+                            <p:menuitem value="Timeline" outcome="timeline" action="#{sessioBean.setMainTab(2)}"/>
+                            <p:menuitem value="Grades" outcome="grades" action="#{sessioBean.setMainTab(3)}"/>
+                            <p:menuitem value="Study" outcome="study" action="#{sessioBean.setMainTab(4)}"/>
+                            <p:menuitem disabled="true"  action="#{sessioBean.setMainTab(5)}">
                                 <p:commandButton type="button" value="Logout" icon="ui-icon-cancel" style="color: darkred"/>
                             </p:menuitem>
                         </p:tabMenu>
